# hackaton-2023

./: .gitignore  README.md  main.py  pyproject.toml  tailwind.config.js
snapcorrect/: __init__.py
snapcorrect/auth/: __init__.py
snapcorrect/db/: __init__.py  fake.sql  schema.sql
snapcorrect/grade/: __init__.py
snapcorrect/ia/: __init__.py
snapcorrect/professor/: __init__.py
snapcorrect/static/js/: index.js
snapcorrect/student/: __init__.py
snapcorrect/templates/: external_base.html  intern_base.html
snapcorrect/templates/auth/: login.html  register.html
snapcorrect/templates/components/: footer.html  navbar.html
snapcorrect/templates/grade/: create.html  index.html
snapcorrect/templates/professor/: index.html
snapcorrect/templates/student/: index.html
snapcorrect/templates/test/: create.html  dashboard.html  index.html
snapcorrect/test/: __init__.py
snapcorrect/utils/: __init__.py
